force-app/main/default/objects/Customer_Success_Story__c/Customer_Success_Story__c.object-meta.xml
<CustomObject>
    <label>Customer Success Story</label>
    <nameField>
        <label>Customer Success Story Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Success Stories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>