force-app/main/default/objects/Customer_Success_Story__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of positive feedback</description>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>