force-app/main/default/objects/Customer_Success_Story__c/validationRules/Customer_Rating_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>Customer_Rating_Range</fullName>
    <active>true</active>
    <description>Ensures the rating for customer success story &gt;=1 and &lt;=5</description>
    <errorConditionFormula>Rating__c&lt;1 || Rating__c &gt;5</errorConditionFormula>
    <errorDisplayField>Account__c</errorDisplayField>
    <errorMessage>Rating must be from 1-5</errorMessage>
</ValidationRule>